# case-pratico

./: README.md
backend/: .env copy  .gitignore  config.py  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  email.py  tipoEmail.py
backend/repository/: __init__.py  emailRepository.py  tipoEmailRepository.py
backend/script/: ia.py
frontend/: index.html  script.js
